defaul conf success
