# routes/v1/api.php
@@ -33,5 +33,6 @@ Route::name('auth.')
 Route::group(['middleware' => 'auth:api'], function () {
     Route::get('users/active', [UserController::class, 'active'])->name('users.active');
     Route::get('users/all', [UserController::class, 'all'])->name('users.all');
+    Route::post('users/change-password', [UserController::class, 'changePassword'])->name('users.change-password');
     Route::apiResource('users', UserController::class)->names('users');
 });
